--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+#Serversettings
 SERVER_HOST_1 = fastapi_app1
 SERVER_PORT_1 = 9000
 SERVER_HOST_2 = fastapi_app2
@@ -6,3 +7,6 @@ SERVER_HOST_3 = fastapi_app3
 SERVER_PORT_3 = 9002
 NGINX_HOST = nginx
 NGINX_PORT = 9999
+#API Settings
+EXPTIME = 30
+TOKENKEY = fjnsdliufhsiufhsdf
