--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,11 @@
 FROM python:3.9
 
-WORKDIR /backend
+WORKDIR /code
 
-COPY ./requirements.txt /backend/requirements.txt
-RUN pip install --no-cache-dir -r /backend/requirements.txt
+COPY ./requirements.txt /code/requirements.txt
 
-COPY . /backend
+RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
-CMD ["fastapi", "run", "app/main.py", "--port", "8000"]
+COPY ./app /code/app
+
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
