--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,7 @@ http{
 
     server {
         listen 9999;
+        server_name dvsapi.hawktuahandspitonthatthing.de;
         location / {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
