--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -1,5 +1,5 @@
 
-    upstream fastapiservers {
+    upstream fastapiservers {   
         server ${SERVER_HOST_1}:${SERVER_PORT_1};
         server ${SERVER_HOST_2}:${SERVER_PORT_2};
         server ${SERVER_HOST_3}:${SERVER_PORT_3};
@@ -8,6 +8,7 @@
     server {
         listen ${NGINX_PORT};
         location / {
+            add_header Access-Control-Allow-Origin *;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
             proxy_set_header Upgrade $http_upgrade;
