managed to connect nginx to backends, need to move into vars and test load balancing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
       CASSANDRA_HOST: cassandra
     volumes:
       - ./backend:/backend
+    expose:
+      - 8000
 
   react:
     image: react-app
