--- a/example.env
+++ b/example.env
@@ -1,13 +1,5 @@
-#Server Settings
 SERVER_HOST_1 = fastapi_app1
-SERVER_PORT_1 = 8000
-
-SERVER_HOST_2 = fastapi_app2
-SERVER_PORT_2 = 8001
-
-SERVER_HOST_3 = fastapi_app3
-SERVER_PORT_3 = 8002
-
+SERVER_PORT = 8000
 
 #NGINX Settings
 NGINX_HOST = nginx
