--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,8 +8,4 @@ RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
 COPY ./app /code/app
 
-COPY ./start.sh /code/start.sh
-
-RUN chmod +x /code/start.sh
-
-ENTRYPOINT ["/code/start.sh"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
