Revert "Merge pull request #21 from muhamedbaqir/dev"
This reverts commit 57c670b4263d976e27e3b43515dca733f1d839fb, reversing
changes made to f5151219c01391d5d246538dcea2eb051fe54133.

--- a/example.env
+++ b/example.env
@@ -1,21 +1,16 @@
-#Server Settings
 SERVER_HOST_1 = fastapi_app1
-SERVER_PORT_1 = 8000
-
-SERVER_HOST_2 = fastapi_app2
-SERVER_PORT_2 = 8001
-
-SERVER_HOST_3 = fastapi_app3
-SERVER_PORT_3 = 8002
-
+SERVER_PORT = 8000
 
 #NGINX Settings
 NGINX_HOST = nginx
 NGINX_PORT = 9999
 
 
-#FastAPI Settings
-FASTAPI_DEBUG = "True"
+#API Settings
 ACCESS_TOKEN_EXPIRE_MINUTES = 30
 ALGORITHM = "HS256"
-SECRET_KEY = "key"
+SECRET_KEY = geheim
+
+# Frontend
+BACKEND_PORT=9999
+FRONTEND_PORT=3000
