--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -1,7 +1,5 @@
     upstream fastapiservers {
-        server ${SERVER_HOST_1}:${SERVER_PORT_1};
-        server ${SERVER_HOST_2}:${SERVER_PORT_2};
-        server ${SERVER_HOST_3}:${SERVER_PORT_3};
+        server fastapi_app:${SERVER_PORT};
     }
     
     server {
