--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   cassandra:
     image: cassandra:4.1.0
@@ -37,54 +36,33 @@ services:
       - ./cassandra/init_keyspace.cql:/init_keyspace.cql
     command: /bin/bash -c "echo loading cassandra keyspace && cqlsh cassandra -f /init_keyspace.cql"
 
-  fastapi_app1:
-    image: fastapi_app1
-    build: 
+  fastapi_app:
+    image: fastapi_app
+    build:
       context: ./backend
       dockerfile: Dockerfile
     depends_on:
-      - cassandra
-    container_name: ${SERVER_HOST_1}
+      cassandra:
+        condition: service_healthy
     restart: always
     env_file: .env
     environment:
-      SERVER_HOST: ${SERVER_HOST_1}
-      SERVER_PORT: ${SERVER_PORT_1}
+      SERVER_PORT: ${SERVER_PORT}
       CASSANDRA_HOST: cassandra
     volumes:
       - ./backend:/backend
-  fastapi_app2:
-    image: fastapi_app2
-    build: 
-      context: ./backend
+    expose:
+      - ${SERVER_PORT}
+
+  react:
+    image: react-app
+    build:
+      context: ./react-app
       dockerfile: Dockerfile
-    depends_on:
-      - cassandra
-    container_name: ${SERVER_HOST_2}
+    container_name: dvsreact
     restart: always
-    env_file: .env
-    environment:
-      SERVER_HOST: ${SERVER_HOST_2}
-      SERVER_PORT: ${SERVER_PORT_2}
-      CASSANDRA_HOST: cassandra
-    volumes:
-      - ./backend:/backend
-  fastapi_app3:
-    image: fastapi_app3
-    build: 
-      context: ./backend
-      dockerfile: Dockerfile
-    depends_on:
-      - cassandra
-    container_name: ${SERVER_HOST_3}
-    restart: always
-    env_file: .env
-    environment:
-      SERVER_HOST: ${SERVER_HOST_3}
-      SERVER_PORT: ${SERVER_PORT_3}
-      CASSANDRA_HOST: cassandra
-    volumes:
-      - ./backend:/backend
+    ports:
+      - ${FRONTEND_PORT}:${FRONTEND_PORT}
 
   nginx:
     image: nginx
@@ -95,7 +73,3 @@ services:
       - ${NGINX_PORT}:${NGINX_PORT}
     volumes:
       - "./nginx/default.conf.template:/etc/nginx/templates/default.conf.template"
-    depends_on:
-      - fastapi_app1
-      - fastapi_app2
-      - fastapi_app3
