--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
 #FastAPI Settings
 FASTAPI_DEBUG = "True"
-SERVER_HOST_1 = fastapi_app1
+SERVER_HOST_1 = fastapi_app
 SERVER_PORT = 8000
 
 #NGINX Settings
